<resources>
    <string name="app_name">MvvmKotlinEdu</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="registration">Registration</string>
    <string name="log_in_page">Log In Page</string>
    <string name="repeat_password">repeat password</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget password?</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="quotes">Quotes</string>
</resources>
