<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewmodel"
                type="dev.rodni.ru.mvvmkotlinedu.ui.auth.AuthViewModel"
        />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="TextFields"
            tools:context=".ui.auth.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_page"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:id="@+id/logo"/>
    <EditText
            android:text="@={viewmodel.email}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/email_login"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:hint="@string/email"/>
    <EditText
            android:text="@={viewmodel.password}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/password_login"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/email_login"
            app:layout_constraintEnd_toEndOf="@+id/email_login"
            app:layout_constraintStart_toStartOf="@+id/email_login"
            android:hint="@string/password"/>
    <Button
            android:onClick="@{viewmodel::onLoginBtnClick}"
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_btn_reg_page"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_btn" android:layout_marginTop="24dp"/>
    <Button
            android:onClick="@{viewmodel::onRegPageIntent}"
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn_reg_page" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/reg_btn_reg_page" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_password_btn" app:layout_constraintStart_toStartOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/password_login"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressbar_login" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout></layout>